--- a/WebAdmin/appsettings.Development.json
+++ b/WebAdmin/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ApiSettings": {
-    "UrlApi": "https://api-interns.h2aits.com",
+    "UrlApi": "https://localhost:7146",
     "UrlApiImage": "https://image-general.h2aits.com/",
     "UrlImageHost": "https://image-general.h2aits.com"
   },
